react and css adjustments

--- a/web/src/views/index.pug
+++ b/web/src/views/index.pug
@@ -1,5 +1,8 @@
-extends layout
+doctype html
 
-block content
-  h1= title
-  p Welcome to my #{title}
+html
+  head
+    title myapp!
+
+  body
+    script(src="/dist/bundle.js")
